--- a/style.css
+++ b/style.css
@@ -9,19 +9,19 @@ div {
 }
 .towers {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     width: 500px;
     border: 3px solid blue;
 }
 .tower {
     display: flex;
-    justify-content: center;
-    margin: 10px 30px 10px 30px;
+    flex-direction: column;
+    /* margin: 0px 10px 0px 30px; */
     min-width: 50px; 
     min-height: 100px;
     border: 3px solid orange;
     border-bottom: 3px solid brown; 
-    flex-direction: column-reverse;
+
 
     /* border-bottom: 3px rgb(160,82,45);  */
     /* Why doesn't this work ^^^^? */
@@ -36,6 +36,7 @@ div {
 }
 .disc {
     height: 10px;
+    border-radius: 10px;
 }
 #disc1 {
     width = 100px;
