--- a/style.css
+++ b/style.css
@@ -1,34 +1,43 @@
+/* overall, big shapes should use vh and vw */
+/* for the towers, probably don't want to do that so discs/towers don't blow up */
+/* use vh and vw for everything, and then whatever looks funny, use pixels for those */
+/* Use percentages for the discs */
+/* the more divs you have, the more flexibility you ahve with styling, use divs */
+/* think about adding box shadows, or add gradient, add background image */
 body {
-    width: 600px;
+    width: 400vw;
     font-family: "Gothic A1";
-    border: 3px solid red;
+    border: 2px solid red;
 }
 div {
     padding: 20px;
-    border: 3px solid gray;
+    border: 2px solid gray;
 }
 .towers {
     display: flex;
     justify-content: space-around;
     width: 500px;
-    border: 3px solid blue;
+    height: 300px;
+    border: 2px solid blue;
 }
 .tower {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
     /* margin: 0px 10px 0px 30px; */
     min-width: 50px; 
     min-height: 100px;
-    border: 3px solid orange;
-    border-bottom: 3px solid brown; 
-
+    border: 2px solid orange;
+    border-bottom: 5px solid brown; 
+    padding-bottom: 0px;
 
     /* border-bottom: 3px rgb(160,82,45);  */
     /* Why doesn't this work ^^^^? */
 
     /* Source for code for vertical lines: */
     /* https://stackoverflow.com/questions/1179928/how-can-i-put-a-vertical-line-down-the-center-of-a-div */
-    background: linear-gradient(#A0522D, #A0522D) no-repeat center/2px 100%;
+    background: linear-gradient(#A0522D, #A0522D) no-repeat center/5px 100%;
 }
 #message {
     display: flex;
@@ -42,6 +51,7 @@ div {
 .disc {
     height: 10px;
     border-radius: 10px;
+    /* align-self: flex-end; */
 }
 #disc1 {
     width: 10px;
