--- a/style.css
+++ b/style.css
@@ -4,9 +4,15 @@
 /* Use percentages for the discs */
 /* the more divs you have, the more flexibility you ahve with styling, use divs */
 /* think about adding box shadows, or add gradient, add background image */
+html {
+    background-color: #ece7d4;
+}
 .name {
     display: flex;
     justify-content: center;
+}
+span {
+    color: #ff3d4d;
 }
 body {
     width: 600px;
@@ -31,18 +37,14 @@ div {
     align-items: center;
     justify-content: flex-end;
     /* margin: 0px 10px 0px 30px; */
-    min-width: 50px; 
-    min-height: 100px;
-    border: 2px solid orange;
-    border-bottom: 5px solid brown;
+    min-width: 10vw; 
+    min-height: 10vh;
+    /* border: 2px solid orange; */
+    border-bottom: 5px solid brown; #A52A2A is the bottom current color, a.k.a. solid brown ???????????????????
     padding-bottom: 0px;
     border-radius: 2px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-
-    /* border-bottom: 3px rgb(160,82,45);  */
-    /* Why doesn't this work ^^^^? */
-
     /* Source for code for vertical lines: */
     /* https://stackoverflow.com/questions/1179928/how-can-i-put-a-vertical-line-down-the-center-of-a-div */
     background: linear-gradient(#654321, #654321) no-repeat center/5px 100%;
@@ -59,12 +61,29 @@ div {
 .reset-button {
     text-align: center;
     margin: 5px auto;
+    padding: 5px 10px 5px 10px;
     border-radius: 10px;
     font-family: "DM Sans";
     font-size: medium;
+    background-color: #ff3d4d;
+    color: #ece7d4;
+}
+select {
+    background: red;
+    border-radius: 5px;
+}
+.difficulty {
+    display: flex;
+    justify-content: center;
+}
+.minimum {
+    display: flex;
+    justify-content: center;
 }
 .disc {
     height: 5px;
+    border-style: solid;
+    border-color:#475f77;
     border-radius: 20px;
     padding: 8px;
     display: flex;
