--- a/style.css
+++ b/style.css
@@ -10,12 +10,14 @@ html {
 .header {
     display: flex;
     justify-content: center;
+    /* padding: 0px; */
 }
 .subheader {
     display: flex;
     justify-content: center;
     text-align: center;
     padding: 0vh 15vw; 
+    padding-bottom: 30px;
 }
 .center {
     display: flex;
@@ -27,18 +29,16 @@ span {
 body {
     width: 90vw;
     height: 100vh;
-    /* font-family: "Gothic A1"; */
     font-family: "DM Sans";
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 div {
     padding: 10px;
-    border: 2px solid gray;
+    /* border: 2px solid gray; */
 }
 .towers {
     display: flex;
     justify-content: space-around;
-    border: 2px solid blue;
 }
 .tower {
     display: flex;
@@ -47,25 +47,28 @@ div {
     justify-content: flex-end;
     width: 90px; 
     min-height: 35vh;
-    /* border: 2px solid orange; */
-    border-bottom: 6px solid brown; /* #A52A2A is the bottom current color, a.k.a. solid brown*/
+    border-bottom: 5px #8b4513; /*  8b4513 #A52A2A is the bottom current color, a.k.a. solid brown*/
+    border-bottom-style: solid;
     padding-bottom: 0px;
     border-radius: 2px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     /* Source for code for vertical lines: */
     /* https://stackoverflow.com/questions/1179928/how-can-i-put-a-vertical-line-down-the-center-of-a-div */
-    background: linear-gradient(#654321, #654321) no-repeat center/5px 100%;
-    /* background: linear-gradient(#A0522D, #A0522D) no-repeat center/5px 100%; */
+    background: linear-gradient(#8b4513, #8b4513) no-repeat center/5px 100%;
 }
 #message {
     display: flex;
     justify-content: center;
     height: 2vh;
+    padding-bottom: 30px;
+
 }
 .reset-section {
     display: flex;
     justify-content: center;
+    padding-top: 40px;
+    padding-bottom: 0px;
 }
 .reset-button {
     text-align: center;
@@ -81,10 +84,12 @@ select {
     background-color: #ece7d4;
     border-radius: 5px;
     font-family: "DM Sans";
+    font-size: 16px;
 }
 .difficulty {
     display: flex;
     justify-content: center;
+    padding-top: 0px;
     padding-bottom: 0px;
 }
 .minimum {
