--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ div {
     /* Source for code for vertical lines: */
     /* https://stackoverflow.com/questions/1179928/how-can-i-put-a-vertical-line-down-the-center-of-a-div */
     background: linear-gradient(#8b4513, #8b4513) no-repeat center/5px 100%;
+    /* background: linear-gradient(#8b4513, #8b4513) no-repeat center/5px 100%; */
 }
 #message {
     display: flex;
