--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,6 @@ html {
 .header {
     display: flex;
     justify-content: center;
-    /* padding: 0px; */
 }
 .subheader {
     display: flex;
@@ -27,7 +26,6 @@ body {
 }
 div {
     padding: 10px;
-    /* border: 2px solid gray; */
 }
 .towers {
     display: flex;
@@ -40,8 +38,7 @@ div {
     justify-content: flex-end;
     width: 90px; 
     min-height: 220px;
-    /* max-height: 40vh; */
-    border-bottom: 5px #8b4513; /*  8b4513 #A52A2A is the bottom current color, a.k.a. solid brown*/
+    border-bottom: 5px #8b4513;
     border-bottom-style: solid;
     padding-bottom: 0px;
     border-radius: 2px;
@@ -50,7 +47,6 @@ div {
     /* Source for code for vertical lines: */
     /* https://stackoverflow.com/questions/1179928/how-can-i-put-a-vertical-line-down-the-center-of-a-div */
     background: linear-gradient(#8b4513, #8b4513) no-repeat center/5px 100%;
-    /* background: linear-gradient(#8b4513, #8b4513) no-repeat center/5px 100%; */
 }
 #message {
     display: flex;
@@ -62,18 +58,11 @@ div {
     display: flex;
     justify-content: center;
     padding-bottom: 0px;
-    /* border: 3px solid blue; */
 }
 .reset-section {
-    /* display: flex;
-    justify-content: center; */
-    /* padding-top: 40px; */
     padding-bottom: 0px;
 } 
 .solve-section {
-    /* display: flex;
-    justify-content: center; */
-    /* padding-top: 40px; */
     padding-bottom: 0px;
 } 
 .reset-button {
